@@ -1,17 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <packaging>pom</packaging>
-
-  <modules>
-    <module>producer</module>
-    <module>consumer</module>
-  </modules>
 
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.4.4</version>
+    <version>2.4.5</version>
     <!--<groupId>org.springframework.cloud</groupId>-->
     <!--<artifactId>spring-cloud-starter-parent</artifactId>-->
     <!--<version>2020.0.2</version>-->
@@ -21,10 +15,17 @@
   <artifactId>kafka-demo</artifactId>
   <version>${revision}</version>
 
+  <packaging>pom</packaging>
+
+  <modules>
+    <module>producer</module>
+    <module>consumer</module>
+  </modules>
+
   <properties>
 
     <!--region General-->
-    <java.version>15</java.version>
+    <java.version>16</java.version>
     <minimal.maven.version>3.6.1</minimal.maven.version>
     <revision>0.0.1-SNAPSHOT</revision>
     <!--endregion-->
@@ -35,12 +36,11 @@
 
     <!--region Libs-->
     <vavr.version>0.10.3</vavr.version>
-    <lombok.version>1.18.18</lombok.version>
-    <checker.version>3.11.0</checker.version>
+    <checker.version>3.13.0</checker.version>
     <annotations.version>20.1.0</annotations.version>
     <jcip-annotations.version>1.0</jcip-annotations.version>
-    <spotbugs.version>4.2.2</spotbugs.version>
-    <error_prone_annotations.version>2.5.1</error_prone_annotations.version>
+    <spotbugs.version>4.2.3</spotbugs.version>
+    <error_prone_annotations.version>2.6.0</error_prone_annotations.version>
     <springdoc-openapi.version>1.5.3</springdoc-openapi.version>
     <!--endregion-->
 
@@ -48,21 +48,17 @@
     <!--endregion-->
 
     <!--region Plugins-->
-    <maven.compiler.release>${java.version}</maven.compiler.release>
-    <maven.compiler.executable>true</maven.compiler.executable>
+    <maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
     <maven.compiler.parameters>true</maven.compiler.parameters>
-    <maven.compiler.forceJavacCompilerUse>true</maven.compiler.forceJavacCompilerUse>
-
+    <maven.compiler.release>${java.version}</maven.compiler.release>
     <maven-enforcer-plugin.version>3.0.0-M3</maven-enforcer-plugin.version>
     <versions-maven-plugin.version>2.7</versions-maven-plugin.version>
     <maven-surefire-plugin.version>3.0.0-M4</maven-surefire-plugin.version>
     <jacoco-maven-plugin.version>0.8.5</jacoco-maven-plugin.version>
     <sonar-maven-plugin.version>2.7.1</sonar-maven-plugin.version>
     <spotbugs-maven-plugin.version>4.0.0</spotbugs-maven-plugin.version>
-    <lombok-maven-plugin.version>1.18.18.0</lombok-maven-plugin.version>
-    <lombok.addOutputDirectory>false</lombok.addOutputDirectory>
-    <lombok.sourceDirectory>${project.basedir}/src/main/java</lombok.sourceDirectory>
-    <lombok.testSourceDirectory>${project.basedir}/src/test/java</lombok.testSourceDirectory>
+    <lombok-maven-plugin.version>1.18.20.0</lombok-maven-plugin.version>
+    <properties-maven-plugin.version>1.0.0</properties-maven-plugin.version>
     <!--endregion-->
 
   </properties>
@@ -131,7 +127,6 @@
 
   <dependencyManagement>
     <dependencies>
-
       <dependency>
         <groupId>org.springframework.cloud</groupId>
         <artifactId>spring-cloud-dependencies</artifactId>
@@ -192,7 +187,28 @@
           <artifactId>maven-compiler-plugin</artifactId>
           <version>${maven-compiler-plugin.version}</version>
           <configuration>
+            <compilerArgs>
+              <!--<arg>-parameters</arg>-->
+              <arg>--enable-preview</arg>
+              <!--<arg>-Xplugin:Manifold</arg>-->
+              <!--<arg>-Xlint:preview</arg>-->
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
+              <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.jvm=ALL-UNNAMED</arg>
+            </compilerArgs>
             <annotationProcessorPaths>
+              <!--<processorPath>-->
+              <!--<groupId>systems.manifold</groupId>-->
+              <!--<artifactId>manifold-all</artifactId>-->
+              <!--<version>${manifold-version}</version>-->
+              <!--</processorPath>-->
               <processorPath>
                 <groupId>org.projectlombok</groupId>
                 <artifactId>lombok</artifactId>
@@ -201,7 +217,7 @@
               <processorPath>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-configuration-processor</artifactId>
-                <version>2.4.2</version>
+                <version>2.4.5</version>
               </processorPath>
             </annotationProcessorPaths>
             <annotationProcessors>
@@ -322,6 +338,25 @@
           <artifactId>lombok-maven-plugin</artifactId>
           <version>${lombok-maven-plugin.version}</version>
         </plugin>
+        <plugin>
+          <groupId>org.codehaus.mojo</groupId>
+          <artifactId>properties-maven-plugin</artifactId>
+          <version>${properties-maven-plugin.version}</version>
+          <executions>
+            <execution>
+              <phase>initialize</phase>
+              <goals>
+                <goal>read-project-properties</goal>
+              </goals>
+              <configuration>
+                <files>
+                  <!--suppress MavenModelInspection-->
+                  <file>${maven.multiModuleProjectDirectory}/maven.properties</file>
+                </files>
+              </configuration>
+            </execution>
+          </executions>
+        </plugin>
       </plugins>
     </pluginManagement>
 
@@ -362,6 +397,10 @@
       <plugin>
         <groupId>org.projectlombok</groupId>
         <artifactId>lombok-maven-plugin</artifactId>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>properties-maven-plugin</artifactId>
       </plugin>
     </plugins>
   </build>
